add controller parameters and allowed methods

--- a/templates/movies/index.html.twig
+++ b/templates/movies/index.html.twig
@@ -11,6 +11,10 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
+    The movie name: {{ name }}
+
+    <br/>
+
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ 'C:/Users/Wszechu/symfony/symfony_tutorial/src/Controller/MoviesController.php'|file_link(0) }}">src/Controller/MoviesController.php</a></code></li>
